# rs-agentx

./: Cargo.toml  README.md
src/: completion.rs  config.rs  lib.rs  message.rs  options.rs  prompt.rs  response.rs  usage.rs
src/models/: chat.rs  mod.rs  openai.rs
src/models/chat/: mod.rs  openai.rs
