[package]
name = "agentx"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
bytes = "1.10.1"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
